revisiting TODOs